2006-10-09  Chong Yidong  <cyd@stupidchicken.com>

	* minibuf.c (temp_echo_area_glyphs): Sit for
	`minibuffer-message-timeout' seconds.

2006-10-08  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c (mac_draw_image_string, mac_draw_image_string_16): Add
	argument OVERSTRIKE_P.
	(mac_draw_string_common, mac_draw_image_string_cg): Likewise.
	Support overstrike.
	(mac_draw_string, mac_draw_string_16): Remove functions.
	(x_draw_glyph_string_foreground): Use overstrike when needed.
	(x_draw_composite_glyph_string_foreground): Likewise.  Use
	mac_draw_image_string_16 instead of mac_draw_string_16.
	(mac_load_query_font): Rename from XLoadQueryFont.  Take argument F
	instead of DPY.  All uses changed.  Don't save/restore font.

2006-10-07  Ralf Angeli  <angeli@caeruleus.net>

	* w32fns.c (w32_createwindow): Honour left and top positions if
	supplied explicitly.

2006-10-06  Kim F. Storm  <storm@cua.dk>

	* xdisp.c (pos_visible_p): Fix value when EOB is visible.

2006-10-05  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (Qinhibit_face_set_after_frame_default): New var.
	(syms_of_frame): Initialize it.
	(x_set_frame_parameters): Avoid resetting :font attributes to the
	new-frame defaults.

2006-10-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.h (clear_regexp_cache): Declare.

	* search.c (compile_pattern): Only check `cp->syntax_table' if needed.
	(compile_pattern_1): Remember `used_syntax' in `cp->syntax_table'.
	(clear_regexp_cache): Only flush those regexps which depend on
	a syntax-table.

	* regex.c (regex_compile): Set the new `used_syntax' bit.

	* regex.h: Remove file local variables.
	(struct re_pattern_buffer): New field `used_syntax'.

2006-10-03  Kim F. Storm  <storm@cua.dk>

	* process.c (list_processes_1): Run sentinels before removing dead
	processes.  Also remove `closed' network connections.

2006-10-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (handle_fontified_prop): Don't fontify at EOB.
